:lipstick: 调整装备卡片背景色

--- a/data/gspanel/panel-0.2.3.html
+++ b/data/gspanel/panel-0.2.3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.2">
     <link rel="stylesheet" href="./{{ css }}.css">
     <title>Document</title>
 </head>
-<body><!--  style=transform:scale(1.5) -->
+<body>
     <div id="container" class="{{ data['element'] }}">
         <img class="UIGachaAvatarImg" src="./{{ data['name'] }}/{{ data['gachaAvatarImg'] }}.png">
         <div class="UID">{{ uid }}</div>
